added name attribute to CourseSession model